# mp2-2025-lab3-postfix

./: .gitignore  CMakeLists.txt
include/: arithmetic.h  stack.h
include/arithmetic_expression/: arithmetic.hpp  calculator.hpp  parser.hpp  token.hpp  token_utils.hpp  validator.hpp
include/containers/: map.hpp  stack.hpp  vector.hpp
samples/: CMakeLists.txt  main_arithmetic.cpp
src/: CMakeLists.txt  arithmetic.cpp
src/arithmetic_expression/: arithmetic.cpp  calculator.cpp  parser.cpp  token_utils.cpp  validator.cpp
test/: test_arithmetic.cpp  test_stack.cpp
tests/: CMakeLists.txt
